--- a/index.html
+++ b/index.html
@@ -4558,10 +4558,10 @@
                           <div class="ADXRXN MJ_eMy SKA4an gSktR2" style=width:100%>
                             <div data-test-id=today-tab-header class="ADXRXN iHQedX lxymZl">
                               <div data-test-id=today-tab-header-date class=ADXRXN>
-                                <h2 class="wyEmcc qnEc35 WuRgKB u04llW LgscnP iuUxZ9">February 10, 2026</h2>
+                                <h2 class="wyEmcc qnEc35 WuRgKB u04llW LgscnP iuUxZ9"> Let somebody else do it for you</h2>
                               </div>
                               <div data-test-id=today-tab-header-subtitle class="ADXRXN To17G1">
-                                <h1 class="wyEmcc qnEc35 WuRgKB yBn74d LgscnP iuUxZ9">Stay Inspired</h1>
+                                <h1 class="wyEmcc qnEc35 WuRgKB yBn74d LgscnP iuUxZ9">U Do</h1>
                               </div>
                             </div>
                           </div>
