--- a/test.html
+++ b/test.html
@@ -21,7 +21,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex items-center justify-between gap-4">
       <!-- Logo (simplified) -->
       <a href="#" class="flex items-center gap-1.5 text-2xl font-black tracking-tight">
-        <span class="text-[#e60023]">P</span><span class="text-black">interest</span>
+        <span class="text-[#e60023]">U</span><span class="text-black">Do</span>
       </a>
 
       <!-- Search -->
