--- a/test.html
+++ b/test.html
@@ -136,7 +136,33 @@
         </div>
       </div>
 
-      <!-- You can add more cards here to fill rows -->
+      <!-- Card 5 -->
+      <div class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white">
+        <img
+          src="https://images.unsplash.com/photo-1522335789203-aabd1fc54bc9?auto=format&fit=crop&w=800&q=80"
+          alt="Evening wear"
+          class="w-full h-80 object-cover transition-transform duration-500 group-hover:scale-105"
+        />
+        <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent"></div>
+        <div class="absolute bottom-5 left-5 text-white">
+          <p class="text-xs uppercase tracking-wider opacity-90">Elegant evening</p>
+          <p class="text-lg font-semibold">Date night outfits</p>
+        </div>
+      </div>
+
+      <!-- Card 6 -->
+      <div class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white">
+        <img
+          src="https://images.unsplash.com/photo-1596462502278-27bfdc403348?auto=format&fit=crop&w=800&q=80"
+          alt="Makeup looks"
+          class="w-full h-80 object-cover transition-transform duration-500 group-hover:scale-105"
+        />
+        <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent"></div>
+        <div class="absolute bottom-5 left-5 text-white">
+          <p class="text-xs uppercase tracking-wider opacity-90">Glow up</p>
+          <p class="text-lg font-semibold">Makeup for special nights</p>
+        </div>
+      </div>
 
     </div>
 
