--- a/test.html
+++ b/test.html
@@ -58,7 +58,7 @@
   </header>
 
   <!-- Main Content – U Do Section -->
-  <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-10">
+  <main class="w-full px-4 sm:px-6 lg:px-8 py-10 bg-white">
 
     <!-- Trending now chips -->
     <div class="flex flex-wrap items-center gap-3 mb-8 text-sm">
