--- a/test.html
+++ b/test.html
@@ -85,7 +85,7 @@
         <img
           src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=800&q=80"
           alt="Cabbage Crush"
-          class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-105"
+          class="w-full h-[243px] object-cover transition-transform duration-500 group-hover:scale-105"
         />
         <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent"></div>
         <div class="absolute bottom-5 left-5 text-white">
@@ -99,7 +99,7 @@
         <img
           src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?auto=format&fit=crop&w=800&q=80"
           alt="Yearning aesthetic"
-          class="w-full h-80 object-cover transition-transform duration-500 group-hover:scale-105"
+          class="w-full h-[304px] object-cover transition-transform duration-500 group-hover:scale-105"
         />
         <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent"></div>
         <div class="absolute bottom-5 left-5 text-white">
@@ -113,7 +113,7 @@
         <img
           src="https://images.unsplash.com/photo-1546552768-9e3a94b38a59?auto=format&fit=crop&w=800&q=80"
           alt="Valentine's Day treats"
-          class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-105"
+          class="w-full h-[243px] object-cover transition-transform duration-500 group-hover:scale-105"
         />
         <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent"></div>
         <div class="absolute bottom-5 left-5 text-white">
@@ -127,7 +127,7 @@
         <img
           src="https://images.unsplash.com/photo-1512496015851-a90fb38ba796?auto=format&fit=crop&w=800&q=80"
           alt="Date night glam"
-          class="w-full h-80 object-cover transition-transform duration-500 group-hover:scale-105"
+          class="w-full h-[304px] object-cover transition-transform duration-500 group-hover:scale-105"
         />
         <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent"></div>
         <div class="absolute bottom-5 left-5 text-white">
@@ -141,7 +141,7 @@
         <img
           src="https://images.unsplash.com/photo-1522335789203-aabd1fc54bc9?auto=format&fit=crop&w=800&q=80"
           alt="Evening wear"
-          class="w-full h-80 object-cover transition-transform duration-500 group-hover:scale-105"
+          class="w-full h-[304px] object-cover transition-transform duration-500 group-hover:scale-105"
         />
         <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent"></div>
         <div class="absolute bottom-5 left-5 text-white">
@@ -155,7 +155,7 @@
         <img
           src="https://images.unsplash.com/photo-1596462502278-27bfdc403348?auto=format&fit=crop&w=800&q=80"
           alt="Makeup looks"
-          class="w-full h-80 object-cover transition-transform duration-500 group-hover:scale-105"
+          class="w-full h-[304px] object-cover transition-transform duration-500 group-hover:scale-105"
         />
         <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent"></div>
         <div class="absolute bottom-5 left-5 text-white">
