--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pinterest – Home (U Do section)</title>
+  <title>UDO – Home (U Do section)</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
@@ -78,7 +78,7 @@
     </div>
 
     <!-- Grid of image cards -->
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-5 md:gap-6">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-x-10 gap-y-5 md:gap-x-12 md:gap-y-6">
 
       <!-- Card 1 -->
       <div class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white h-[319px]">
