--- a/test.html
+++ b/test.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>UDO  </title>
+  <title>UDO – Home (U Do section)</title>
+  <link rel="icon" type="image/jpeg" href="logo/37263112-e91c-4547-855b-ade930f7fdfe.jpg">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
