--- a/test.html
+++ b/test.html
@@ -15,13 +15,10 @@
     }
     .search-overlay {
       transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-      transform: translateY(-100%);
       opacity: 0;
       pointer-events: none;
-      top: 0;
     }
     .search-overlay.active {
-      transform: translateY(0);
       opacity: 1;
       pointer-events: auto;
     }
@@ -183,7 +180,7 @@
   </main>
 
   <!-- Search Overlay -->
-  <div id="searchOverlay" class="search-overlay fixed left-0 right-0 z-[100] pt-[70px]">
+  <div id="searchOverlay" class="search-overlay fixed left-0 right-0 top-0 z-[100] pt-[70px] bg-black/20 backdrop-blur-sm">
     <div class="w-full h-[50vh] bg-white shadow-2xl p-8 overflow-y-auto">
       <div class="flex items-center justify-between mb-8">
         <div class="flex-1 mr-4">
