--- a/test.html
+++ b/test.html
@@ -95,13 +95,14 @@
       <!-- Card 1 -->
       <div class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white h-[351px] w-[96%] mx-auto">
         <img
-          src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=800&q=80"
-          alt="Cabbage Crush"
+          src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?auto=format&fit=crop&w=800&q=80"
+          alt="Furniture assembly"
           class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105"
         />
         <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent"></div>
-        <div class="absolute bottom-5 left-5 text-white">          <p class="text-xs uppercase tracking-wider opacity-90">Trending now</p>
-          <p class="text-lg font-semibold">Cabbage Crush</p>
+        <div class="absolute bottom-5 left-5 text-white">
+          <p class="text-xs uppercase tracking-wider opacity-90">Trending now</p>
+          <p class="text-lg font-semibold">Furniture assembly</p>
         </div>
       </div>
 
