--- a/test.html
+++ b/test.html
@@ -109,28 +109,28 @@
       <!-- Card 2 -->
       <div class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white h-[351px] w-[96%] mx-auto">
         <img
-          src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?auto=format&fit=crop&w=800&q=80"
-          alt="Yearning aesthetic"
+          src="https://images.unsplash.com/photo-1532453288672-3a27e9be9efd?auto=format&fit=crop&w=800&q=80"
+          alt="Mount art or shelves"
           class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105"
         />
         <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent"></div>
         <div class="absolute bottom-5 left-5 text-white">
-          <p class="text-xs uppercase tracking-wider opacity-90">Close but far</p>
-          <p class="text-lg font-semibold">Yearning aesthetic</p>
+          <p class="text-xs uppercase tracking-wider opacity-90">Home improvement</p>
+          <p class="text-lg font-semibold">Mount art or shelves</p>
         </div>
       </div>
 
       <!-- Card 3 -->
       <div class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white h-[351px] w-[96%] mx-auto">
         <img
-          src="https://images.unsplash.com/photo-1546552768-9e3a94b38a59?auto=format&fit=crop&w=800&q=80"
-          alt="Valentine's Day treats"
+          src="https://images.unsplash.com/photo-1600518464441-9154a4dea21b?auto=format&fit=crop&w=800&q=80"
+          alt="Movers"
           class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105"
         />
         <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent"></div>
         <div class="absolute bottom-5 left-5 text-white">
-          <p class="text-xs uppercase tracking-wider opacity-90">Love at first bite</p>
-          <p class="text-lg font-semibold">Valentine's Day treats</p>
+          <p class="text-xs uppercase tracking-wider opacity-90">Professional help</p>
+          <p class="text-lg font-semibold">Movers</p>
         </div>
       </div>
 
