--- a/test.html
+++ b/test.html
@@ -82,11 +82,11 @@
     <!-- Big Title + Subtitle -->
     <div class="text-center mb-10">
       <h1 class="text-5xl sm:text-6xl md:text-7xl font-extrabold tracking-tight mb-3">
-        U Do
+        <span class="text-[#e60023]">U</span><span class="text-black">Do</span>
       </h1>
       <p class="text-xl sm:text-2xl text-gray-700 font-light">
         Let somebody else do it for you
-      </pr>
+      </p>
     </div>
 
     <!-- Grid of image cards -->
@@ -137,42 +137,42 @@
       <!-- Card 4 -->
       <div class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white h-[351px] w-[96%] mx-auto">
         <img
-          src="https://images.unsplash.com/photo-1512496015851-a90fb38ba796?auto=format&fit=crop&w=800&q=80"
-          alt="Date night glam"
+          src="https://images.unsplash.com/photo-1621905252507-b35492cc74b4?auto=format&fit=crop&w=800&q=80"
+          alt="Electrical help"
           class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105"
         />
         <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent"></div>
         <div class="absolute bottom-5 left-5 text-white">
-          <p class="text-xs uppercase tracking-wider opacity-90">Date night glam</p>
-          <p class="text-lg font-semibold">Trending lip combos to try</p>
+          <p class="text-xs uppercase tracking-wider opacity-90">Expert service</p>
+          <p class="text-lg font-semibold">Electrical help</p>
         </div>
       </div>
 
       <!-- Card 5 -->
       <div class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white h-[351px] w-[96%] mx-auto">
         <img
-          src="https://images.unsplash.com/photo-1522335789203-aabd1fc54bc9?auto=format&fit=crop&w=800&q=80"
-          alt="Evening wear"
+          src="https://images.unsplash.com/photo-1585704032915-c3400ca199e7?auto=format&fit=crop&w=800&q=80"
+          alt="Plumbing help"
           class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105"
         />
         <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent"></div>
         <div class="absolute bottom-5 left-5 text-white">
-          <p class="text-xs uppercase tracking-wider opacity-90">Elegant evening</p>
-          <p class="text-lg font-semibold">Date night outfits</p>
+          <p class="text-xs uppercase tracking-wider opacity-90">Reliable service</p>
+          <p class="text-lg font-semibold">Plumbing help</p>
         </div>
       </div>
 
       <!-- Card 6 -->
       <div class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white h-[351px] w-[96%] mx-auto">
         <img
-          src="https://images.unsplash.com/photo-1596462502278-27bfdc403348?auto=format&fit=crop&w=800&q=80"
-          alt="Makeup looks"
+          src="https://images.unsplash.com/photo-1581578731548-c64695cc6952?auto=format&fit=crop&w=800&q=80"
+          alt="Cleaning help"
           class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105"
         />
         <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent"></div>
         <div class="absolute bottom-5 left-5 text-white">
-          <p class="text-xs uppercase tracking-wider opacity-90">Glow up</p>
-          <p class="text-lg font-semibold">Makeup for special nights</p>
+          <p class="text-xs uppercase tracking-wider opacity-90">Fresh & clean</p>
+          <p class="text-lg font-semibold">Cleaning help</p>
         </div>
       </div>
 
