--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex items-center justify-between gap-4">
       <!-- Logo (simplified) -->
       <a href="#" class="flex items-center gap-1.5 text-2xl font-black tracking-tight">
-        <span class="text-[#e60023]">U</span><span class="text-black">Do</span>
+        <span class="text-orange-500">U</span><span class="text-black">Do</span>
       </a>
 
       <!-- Search -->
@@ -82,10 +82,10 @@
     <!-- Big Title + Subtitle -->
     <div class="text-center mb-10">
       <h1 class="text-5xl sm:text-6xl md:text-7xl font-extrabold tracking-tight mb-3">
-        <span class="text-[#e60023]">U</span><span class="text-black">Do</span>
+        <span class="text-orange-500">U</span><span class="text-black">Do</span>
       </h1>
       <p class="text-xl sm:text-2xl text-gray-700 font-light">
-        Let somebody else do it for you
+        Select the best, they'll do the rest.
       </p>
     </div>
 
@@ -189,7 +189,7 @@
             type="text"
             id="overlaySearchInput"
             placeholder="Search for ideas..."
-            class="w-full text-2xl font-light border-b-2 border-gray-200 pb-3 focus:outline-none focus:border-[#e60023] transition"
+            class="w-full text-2xl font-light border-b-2 border-gray-200 pb-3 focus:outline-none focus:border-orange-500 transition"
             autofocus
           />
         </div>
