--- a/public/index.html
+++ b/public/index.html
@@ -217,6 +217,36 @@
           </div>
         </div>
 
+        <h3 class="text-sm font-semibold text-gray-500 uppercase tracking-wider mt-8">Popular on U Do</h3>
+        <div class="space-y-2">
+          <div class="flex items-center gap-3 p-3 hover:bg-gray-50 rounded-lg cursor-pointer transition">
+            <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
+            </svg>
+            <span class="text-gray-700">Furniture assembly</span>
+          </div>
+          <div class="flex items-center gap-3 p-3 hover:bg-gray-50 rounded-lg cursor-pointer transition">
+            <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
+            </svg>
+            <span class="text-gray-700">Mount art or shelves</span>
+          </div>
+          <div class="flex items-center gap-3 p-3 hover:bg-gray-50 rounded-lg cursor-pointer transition">
+            <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
+            </svg>
+            <span class="text-gray-700">Movers</span>
+          </div>
+        </div>
+
+        <h3 class="text-sm font-semibold text-gray-500 uppercase tracking-wider mt-8">Trending now</h3>
+        <div class="flex flex-wrap gap-2">
+          <span class="px-4 py-2 bg-gray-100 hover:bg-gray-200 rounded-full text-gray-700 cursor-pointer transition">Cabbage Crush</span>
+          <span class="px-4 py-2 bg-gray-100 hover:bg-gray-200 rounded-full text-gray-700 cursor-pointer transition">Yearning aesthetic</span>
+          <span class="px-4 py-2 bg-gray-100 hover:bg-gray-200 rounded-full text-gray-700 cursor-pointer transition">Date night glam</span>
+          <span class="px-4 py-2 bg-gray-100 hover:bg-gray-200 rounded-full text-gray-700 cursor-pointer transition">Evening wear</span>
+        </div>
+
       </div>
     </div>
   </div>
