added logo on top left of the header

--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,14 @@
   <header class="sticky top-0 z-50 bg-white/80 backdrop-blur-md border-b border-gray-200 shadow-sm">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex items-center justify-between gap-4">
       <!-- Logo (simplified) -->
-      <a href="#" class="flex items-center gap-1.5 text-2xl font-black tracking-tight">
+
+      <!-- <a href="#" class="flex items-center gap-1.5 text-2xl font-black tracking-tight">
         <span class="text-orange-500">U</span><span class="text-black">Do</span>
-      </a>
+      </a> -->
+
+       <h1 class="">
+        <img src="UDO-2.jpg" alt="UDO" class="h-24 w-auto" />
+      </h1>
 
       <!-- Search -->
       <div class="flex-1 max-w-3xl">
