--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,15 @@
         <span class="text-orange-500">U</span><span class="text-black">Do</span>
       </a> -->
 
-      <div class="relative w-32 h-12 flex items-center"> 
+      <!-- <div class="relative w-32 h-12 flex items-center"> 
         <h1 class="absolute left-0 top-1/2 -translate-y-1/2">
           <img src="UDO-6.jpg" alt="UDO" class="h-32 w-auto max-w-none shadow-lg rounded-lg" />
+  </h1>
+</div> -->
+
+<div class="relative w-32 h-12 flex items-center -ml-4 sm:-ml-6 lg:-ml-8"> 
+  <h1 class="absolute left-0 top-1/2 -translate-y-1/2">
+    <img src="UDO-6.jpg" alt="UDO" class="h-32 w-auto max-w-none shadow-lg rounded-lg" />
   </h1>
 </div>
 
