--- a/public/index.html
+++ b/public/index.html
@@ -27,60 +27,44 @@
 <body class="min-h-screen font-sans antialiased text-gray-900">
 
   <!-- Top Search Bar -->
+  
   <header class="sticky top-0 z-50 bg-white/80 backdrop-blur-md border-b border-gray-200 shadow-sm">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex items-center justify-between gap-4">
-      <!-- Logo (simplified) -->
-
-      <!-- <a href="#" class="flex items-center gap-1.5 text-2xl font-black tracking-tight">
-        <span class="text-orange-500">U</span><span class="text-black">Do</span>
-      </a> -->
-
-      <!-- <div class="relative w-32 h-12 flex items-center"> 
-        <h1 class="absolute left-0 top-1/2 -translate-y-1/2">
-          <img src="UDO-6.jpg" alt="UDO" class="h-32 w-auto max-w-none shadow-lg rounded-lg" />
-  </h1>
-</div> -->
-
-<div class="relative w-32 h-12 flex items-center -ml-4 sm:-ml-6 lg:-ml-8"> 
-  <h1 class="absolute left-0 top-1/2 -translate-y-1/2">
+  <h1 class="absolute left-12 top-1/2 -translate-y-1/2 z-[60]">
     <img src="UDO-6.jpg" alt="UDO" class="h-32 w-auto max-w-none shadow-lg rounded-lg" />
   </h1>
-</div>
 
-      <!-- Search -->
-      <div class="flex-1 max-w-3xl">
-        <div class="relative">
-          <input
-            type="text"
-            id="searchInput"
-            placeholder="Search"
-            class="w-full pl-5 pr-12 py-3.5 bg-gray-100/80 border border-gray-300 rounded-full text-base focus:outline-none focus:ring-2 focus:ring-gray-400/50 transition shadow-sm cursor-pointer"
-            readonly
-          />
-          <button class="absolute right-4 top-1/2 -translate-y-1/2 text-gray-500 hover:text-gray-700">
-            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-            </svg>
-          </button>
-        </div>
-      </div>
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex items-center justify-between gap-4">
+    
+    <div class="w-40 hidden lg:block"></div>
 
-      <!-- Right icons / menu -->
-      <div class="flex items-center gap-3">
-        <button class="p-2 rounded-full hover:bg-gray-100">
-          <svg class="w-6 h-6 text-gray-700" fill="currentColor" viewBox="0 0 24 24">
-            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"/>
+    <div class="flex-1 max-w-3xl">
+      <div class="relative">
+        <input
+          type="text"
+          placeholder="Search"
+          class="w-full pl-5 pr-12 py-3.5 bg-gray-100/80 border border-gray-300 rounded-full text-base focus:outline-none focus:ring-2 focus:ring-gray-400/50 transition shadow-sm cursor-pointer"
+          readonly
+        />
+        <button class="absolute right-4 top-1/2 -translate-y-1/2 text-gray-500 hover:text-gray-700">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
           </svg>
         </button>
-        <button class="p-2 rounded-full hover:bg-gray-100">
-          <svg class="w-6 h-6 text-gray-700" fill="currentColor" viewBox="0 0 24 24">
-            <path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V5h14v14zM17 8.5h-2.5V6H12v2.5H9.5V12H12v2.5h2.5V12H17z"/>
-          </svg>
-        </button>
-        <div class="w-9 h-9 bg-gray-300 rounded-full flex items-center justify-center text-white font-medium">J</div>
       </div>
     </div>
-  </header>
+
+    <div class="flex items-center gap-3">
+      <button class="p-2 rounded-full hover:bg-gray-100">
+        <svg class="w-6 h-6 text-gray-700" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"/>
+        </svg>
+      </button>
+      <div class="w-9 h-9 bg-gray-300 rounded-full flex items-center justify-center text-white font-medium">J</div>
+    </div>
+  </div>
+</header>
+
+
 
   <!-- Main Content – U Do Section -->
   <main class="w-full px-16 sm:px-24 lg:px-32 py-10 bg-white">
