--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
     <div class="flex-1 max-w-3xl">
       <div class="relative">
         <input
+          id="searchInput"
           type="text"
           placeholder="Search"
           class="w-full pl-5 pr-12 py-3.5 bg-gray-100/80 border border-gray-300 rounded-full text-base focus:outline-none focus:ring-2 focus:ring-gray-400/50 transition shadow-sm cursor-pointer"
