--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
         <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent"></div>
         <div class="absolute bottom-5 left-5 text-white">
           <p class="text-xs uppercase tracking-wider opacity-90">Trending now</p>
-          <p class="text-lg font-semibold">Furniture assembly</p>
+          <p class="text-4xl font-semibold">Furniture assembly</p>
         </div>
       </div>
 
@@ -108,7 +108,7 @@
         <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent"></div>
         <div class="absolute bottom-5 left-5 text-white">
           <p class="text-xs uppercase tracking-wider opacity-90">Home improvement</p>
-          <p class="text-lg font-semibold">Mount art or shelves</p>
+          <p class="text-4xl font-semibold">Mount art or shelves</p>
         </div>
       </div>
 
@@ -122,7 +122,7 @@
         <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent"></div>
         <div class="absolute bottom-5 left-5 text-white">
           <p class="text-xs uppercase tracking-wider opacity-90">Professional help</p>
-          <p class="text-lg font-semibold">Movers</p>
+          <p class="text-4xl font-semibold">Movers</p>
         </div>
       </div>
 
@@ -136,7 +136,7 @@
         <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent"></div>
         <div class="absolute bottom-5 left-5 text-white">
           <p class="text-xs uppercase tracking-wider opacity-90">Expert service</p>
-          <p class="text-lg font-semibold">Electrical help</p>
+          <p class="text-4xl font-semibold">Electrical help</p>
         </div>
       </div>
 
@@ -150,7 +150,7 @@
         <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent"></div>
         <div class="absolute bottom-5 left-5 text-white">
           <p class="text-xs uppercase tracking-wider opacity-90">Reliable service</p>
-          <p class="text-lg font-semibold">Plumbing help</p>
+          <p class="text-4xl font-semibold">Plumbing help</p>
         </div>
       </div>
 
@@ -164,7 +164,7 @@
         <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-transparent"></div>
         <div class="absolute bottom-5 left-5 text-white">
           <p class="text-xs uppercase tracking-wider opacity-90">Fresh & clean</p>
-          <p class="text-lg font-semibold">Cleaning help</p>
+          <p class="text-4xl font-semibold">Cleaning help</p>
         </div>
       </div>
 
