--- a/public/index.html
+++ b/public/index.html
@@ -194,23 +194,14 @@
 
       <div class="space-y-4">
         <h3 class="text-sm font-semibold text-gray-800 uppercase tracking-wider">Recent searches</h3>
-        <div class="space-y-2">
-          <div class="flex items-center gap-3 p-3 hover:bg-gray-50 rounded-lg cursor-pointer transition">
-            <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
-            </svg>
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3">
+          <div class="p-4 bg-gray-100 hover:bg-gray-200 rounded-lg cursor-pointer transition text-center">
             <span class="text-gray-700">Valentine's Day treats</span>
           </div>
-          <div class="flex items-center gap-3 p-3 hover:bg-gray-50 rounded-lg cursor-pointer transition">
-            <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
-            </svg>
+          <div class="p-4 bg-gray-100 hover:bg-gray-200 rounded-lg cursor-pointer transition text-center">
             <span class="text-gray-700">Date night outfits</span>
           </div>
-          <div class="flex items-center gap-3 p-3 hover:bg-gray-50 rounded-lg cursor-pointer transition">
-            <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
-            </svg>
+          <div class="p-4 bg-gray-100 hover:bg-gray-200 rounded-lg cursor-pointer transition text-center">
             <span class="text-gray-700">Makeup for special nights</span>
           </div>
         </div>
