--- a/public/index.html
+++ b/public/index.html
@@ -194,7 +194,7 @@
 
       <div class="space-y-4">
         <h3 class="text-sm font-semibold text-gray-800 uppercase tracking-wider">Recent searches</h3>
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3">
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
           <div class="p-4 bg-gray-100 hover:bg-gray-200 rounded-lg cursor-pointer transition text-center">
             <span class="text-gray-700">Valentine's Day treats</span>
           </div>
@@ -203,6 +203,9 @@
           </div>
           <div class="p-4 bg-gray-100 hover:bg-gray-200 rounded-lg cursor-pointer transition text-center">
             <span class="text-gray-700">Makeup for special nights</span>
+          </div>
+          <div class="p-4 bg-gray-100 hover:bg-gray-200 rounded-lg cursor-pointer transition text-center">
+            <span class="text-gray-700">Home decor ideas</span>
           </div>
         </div>
 
