--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
       </h1>
       <p class="text-xl sm:text-2xl text-gray-700 font-light">
         <!-- Select the best, they'll do the rest. -->
-         Select the best. Skip the commission.
+         Select the best. Skip the  (middleman) commission.
       </p>
     </div>
 
@@ -195,17 +195,21 @@
       <div class="space-y-4">
         <h3 class="text-sm font-semibold text-gray-800 uppercase tracking-wider">Recent searches</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
-          <div class="p-4 bg-gray-100 hover:bg-gray-200 rounded-lg cursor-pointer transition text-center">
-            <span class="text-gray-700">Valentine's Day treats</span>
+          <div class="py-12 px-4 bg-gray-100 hover:bg-gray-200 rounded-lg cursor-pointer transition overflow-hidden flex items-center">
+            <img src="https://images.unsplash.com/photo-1516589178581-6cd7833ae3b2?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[14%] h-full object-cover mr-3" />
+            <span class="text-gray-700 flex-1 text-center">Valentine's Day treats</span>
           </div>
-          <div class="p-4 bg-gray-100 hover:bg-gray-200 rounded-lg cursor-pointer transition text-center">
-            <span class="text-gray-700">Date night outfits</span>
+          <div class="py-12 px-4 bg-gray-100 hover:bg-gray-200 rounded-lg cursor-pointer transition overflow-hidden flex items-center">
+            <img src="https://images.unsplash.com/photo-15158866576655-77a29e4145d2?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[14%] h-full object-cover mr-3" />
+            <span class="text-gray-700 flex-1 text-center">Date night outfits</span>
           </div>
-          <div class="p-4 bg-gray-100 hover:bg-gray-200 rounded-lg cursor-pointer transition text-center">
-            <span class="text-gray-700">Makeup for special nights</span>
+          <div class="py-12 px-4 bg-gray-100 hover:bg-gray-200 rounded-lg cursor-pointer transition overflow-hidden flex items-center">
+            <img src="https://images.unsplash.com/photo-1522335789203-aabd1fc54bc9?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[14%] h-full object-cover mr-3" />
+            <span class="text-gray-700 flex-1 text-center">Makeup for special nights</span>
           </div>
-          <div class="p-4 bg-gray-100 hover:bg-gray-200 rounded-lg cursor-pointer transition text-center">
-            <span class="text-gray-700">Home decor ideas</span>
+          <div class="py-12 px-4 bg-gray-100 hover:bg-gray-200 rounded-lg cursor-pointer transition overflow-hidden flex items-center">
+            <img src="https://images.unsplash.com/photo-1484101403633-562f891dc89a?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[14%] h-full object-cover mr-3" />
+            <span class="text-gray-700 flex-1 text-center">Home decor ideas</span>
           </div>
         </div>
 
