--- a/public/index.html
+++ b/public/index.html
@@ -196,20 +196,20 @@
         <h3 class="text-sm font-semibold text-gray-800 uppercase tracking-wider">Recent searches</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
           <div class="py-12 px-4 bg-gray-100 hover:bg-gray-200 rounded-lg cursor-pointer transition overflow-hidden flex items-center">
-            <img src="https://images.unsplash.com/photo-1516589178581-6cd7833ae3b2?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[14%] h-full object-cover mr-3" />
-            <span class="text-gray-700 flex-1 text-center">Valentine's Day treats</span>
+            <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[14%] h-full object-cover mr-3" />
+            <span class="text-gray-700 flex-1 text-center">Furniture assembly</span>
           </div>
           <div class="py-12 px-4 bg-gray-100 hover:bg-gray-200 rounded-lg cursor-pointer transition overflow-hidden flex items-center">
-            <img src="https://images.unsplash.com/photo-15158866576655-77a29e4145d2?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[14%] h-full object-cover mr-3" />
-            <span class="text-gray-700 flex-1 text-center">Date night outfits</span>
+            <img src="https://images.unsplash.com/photo-1532453288672-3a27e9be9efd?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[14%] h-full object-cover mr-3" />
+            <span class="text-gray-700 flex-1 text-center">Mount art or shelves</span>
           </div>
           <div class="py-12 px-4 bg-gray-100 hover:bg-gray-200 rounded-lg cursor-pointer transition overflow-hidden flex items-center">
-            <img src="https://images.unsplash.com/photo-1522335789203-aabd1fc54bc9?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[14%] h-full object-cover mr-3" />
-            <span class="text-gray-700 flex-1 text-center">Makeup for special nights</span>
+            <img src="https://images.unsplash.com/photo-1600518464441-9154a4dea21b?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[14%] h-full object-cover mr-3" />
+            <span class="text-gray-700 flex-1 text-center">Movers</span>
           </div>
           <div class="py-12 px-4 bg-gray-100 hover:bg-gray-200 rounded-lg cursor-pointer transition overflow-hidden flex items-center">
-            <img src="https://images.unsplash.com/photo-1484101403633-562f891dc89a?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[14%] h-full object-cover mr-3" />
-            <span class="text-gray-700 flex-1 text-center">Home decor ideas</span>
+            <img src="https://images.unsplash.com/photo-1621905252507-b35492cc74b4?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[14%] h-full object-cover mr-3" />
+            <span class="text-gray-700 flex-1 text-center">Electrical help</span>
           </div>
         </div>
 
