--- a/public/index.html
+++ b/public/index.html
@@ -195,21 +195,21 @@
       <div class="space-y-4">
         <h3 class="text-sm font-semibold text-gray-800 uppercase tracking-wider">Recent searches</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
-          <div class="py-3 px-4 bg-gray-100 hover:bg-gray-200 rounded-lg cursor-pointer transition overflow-hidden flex items-center">
-            <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-lg" />
-            <span class="text-gray-700 flex-1 text-center">Furniture assembly</span>
+          <div class="py-3 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center">
+            <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
+            <span class="text-gray-900 flex-1 text-center text-base font-medium">Furniture assembly</span>
           </div>
-          <div class="py-3 px-4 bg-gray-100 hover:bg-gray-200 rounded-lg cursor-pointer transition overflow-hidden flex items-center">
-            <img src="https://images.unsplash.com/photo-1532453288672-3a27e9be9efd?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-lg" />
-            <span class="text-gray-700 flex-1 text-center">Mount art or shelves</span>
+          <div class="py-3 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center">
+            <img src="https://images.unsplash.com/photo-1532453288672-3a27e9be9efd?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
+            <span class="text-gray-900 flex-1 text-center text-base font-medium">Mount art or shelves</span>
           </div>
-          <div class="py-3 px-4 bg-gray-100 hover:bg-gray-200 rounded-lg cursor-pointer transition overflow-hidden flex items-center">
-            <img src="https://images.unsplash.com/photo-1600518464441-9154a4dea21b?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-lg" />
-            <span class="text-gray-700 flex-1 text-center">Movers</span>
+          <div class="py-3 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center">
+            <img src="https://images.unsplash.com/photo-1600518464441-9154a4dea21b?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
+            <span class="text-gray-900 flex-1 text-center text-base font-medium">Movers</span>
           </div>
-          <div class="py-3 px-4 bg-gray-100 hover:bg-gray-200 rounded-lg cursor-pointer transition overflow-hidden flex items-center">
-            <img src="https://images.unsplash.com/photo-1621905252507-b35492cc74b4?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-lg" />
-            <span class="text-gray-700 flex-1 text-center">Electrical help</span>
+          <div class="py-3 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center">
+            <img src="https://images.unsplash.com/photo-1621905252507-b35492cc74b4?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
+            <span class="text-gray-900 flex-1 text-center text-base font-medium">Electrical help</span>
           </div>
         </div>
 
