--- a/public/index.html
+++ b/public/index.html
@@ -174,7 +174,7 @@
 
   <!-- Search Overlay -->
   <div id="searchOverlay" class="search-overlay fixed left-0 right-0 top-0 z-[100] pt-[70px] bg-black/20 backdrop-blur-sm">
-    <div class="w-full h-[70vh] bg-white shadow-2xl p-8 overflow-y-auto">
+    <div class="mx-4 h-[70vh] bg-white shadow-2xl p-8 overflow-y-auto">
       <div class="flex items-center justify-between mb-8">
         <div class="flex-1 mr-4">
           <input
