--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
       </h1>
       <p class="text-xl sm:text-2xl text-gray-700 font-light">
         <!-- Select the best, they'll do the rest. -->
-         Select the best. Skip the  (middleman) commission.
+         Select the best. Skip the (middleman) commission.
       </p>
     </div>
 
@@ -196,8 +196,8 @@
         <h3 class="text-sm font-semibold text-gray-800 uppercase tracking-wider">Recent searches</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
-            <button class="absolute top-1 right-1 w-6 h-6 bg-white/90 rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition shadow-sm z-10">
-              <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
+              <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
@@ -205,8 +205,8 @@
             <span class="text-gray-900 flex-1 text-center text-base font-medium">Furniture assembly</span>
           </div>
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
-            <button class="absolute top-1 right-1 w-6 h-6 bg-white/90 rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition shadow-sm z-10">
-              <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
+              <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
@@ -214,8 +214,8 @@
             <span class="text-gray-900 flex-1 text-center text-base font-medium">Mount art or shelves</span>
           </div>
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
-            <button class="absolute top-1 right-1 w-6 h-6 bg-white/90 rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition shadow-sm z-10">
-              <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
+              <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
@@ -223,8 +223,8 @@
             <span class="text-gray-900 flex-1 text-center text-base font-medium">Movers</span>
           </div>
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
-            <button class="absolute top-1 right-1 w-6 h-6 bg-white/90 rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition shadow-sm z-10">
-              <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
+              <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
@@ -236,8 +236,8 @@
         <h3 class="text-sm font-semibold text-gray-800 uppercase tracking-wider mt-8">Popular on U Do</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
-            <button class="absolute top-1 right-1 w-6 h-6 bg-white/90 rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition shadow-sm z-10">
-              <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
+              <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
@@ -245,8 +245,8 @@
             <span class="text-gray-900 flex-1 text-center text-base font-medium">Furniture assembly</span>
           </div>
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
-            <button class="absolute top-1 right-1 w-6 h-6 bg-white/90 rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition shadow-sm z-10">
-              <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
+              <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
@@ -254,8 +254,8 @@
             <span class="text-gray-900 flex-1 text-center text-base font-medium">Mount art or shelves</span>
           </div>
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
-            <button class="absolute top-1 right-1 w-6 h-6 bg-white/90 rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition shadow-sm z-10">
-              <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
+              <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
@@ -267,8 +267,8 @@
         <h3 class="text-sm font-semibold text-gray-800 uppercase tracking-wider mt-8">Trending now</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
-            <button class="absolute top-1 right-1 w-6 h-6 bg-white/90 rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition shadow-sm z-10">
-              <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
+              <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
@@ -276,8 +276,8 @@
             <span class="text-gray-900 flex-1 text-center text-base font-medium">Cabbage Crush</span>
           </div>
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
-            <button class="absolute top-1 right-1 w-6 h-6 bg-white/90 rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition shadow-sm z-10">
-              <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
+              <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
@@ -285,8 +285,8 @@
             <span class="text-gray-900 flex-1 text-center text-base font-medium">Yearning aesthetic</span>
           </div>
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
-            <button class="absolute top-1 right-1 w-6 h-6 bg-white/90 rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition shadow-sm z-10">
-              <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
+              <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
@@ -294,8 +294,8 @@
             <span class="text-gray-900 flex-1 text-center text-base font-medium">Date night glam</span>
           </div>
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
-            <button class="absolute top-1 right-1 w-6 h-6 bg-white/90 rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition shadow-sm z-10">
-              <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
+              <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
