--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     }
     .search-overlay.active {
       opacity: 1;
-      pointer-events: none;
+      pointer-events: auto;
     }
   </style>
 </head>
@@ -169,6 +169,9 @@
       </div>
 
     </div>
+
+    <!-- Extra space for scrolling -->
+    <div class="h-[500px]"></div>
 
   </main>
 
