--- a/public/index.html
+++ b/public/index.html
@@ -170,8 +170,30 @@
 
     </div>
 
-    <!-- Extra space for scrolling -->
-    <div class="h-[500px]"></div>
+    <!-- Two-Column Split Layout -->
+    <div class="flex flex-col lg:flex-row gap-8 mt-12 bg-orange-50 rounded-3xl p-8 lg:p-12">
+      <!-- Left Column - Image -->
+      <div class="flex-1">
+        <img
+          src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?auto=format&fit=crop&w=800&q=80"
+          alt="Professional at work"
+          class="w-full h-full object-cover rounded-2xl shadow-lg"
+        />
+      </div>
+
+      <!-- Right Column - Text Content -->
+      <div class="flex-1 flex flex-col justify-center">
+        <h2 class="text-4xl lg:text-5xl font-bold text-gray-900 mb-6">
+          Get the Help You Need, When You Need It
+        </h2>
+        <p class="text-lg text-gray-600 leading-relaxed mb-8">
+          Connect with verified professionals for any task around your home. From furniture assembly to home repairs, we make it easy to find skilled help at fair prices. No middleman, no hidden fees, just quality service you can trust.
+        </p>
+        <button class="bg-orange-500 hover:bg-orange-600 text-white font-semibold py-4 px-8 rounded-full text-lg transition duration-300 shadow-md hover:shadow-lg w-fit">
+          Get Started Today
+        </button>
+      </div>
+    </div>
 
   </main>
 
