--- a/public/login/index.html
+++ b/public/login/index.html
@@ -65,7 +65,7 @@
         <span class="text-orange-500">U</span><span class="text-black">Do</span>
       </h1>
       <p class="text-xl sm:text-2xl text-gray-700 font-light">
-         sign up page - Select the best. Skip the (middleman) commission.
+         Select the best. Skip the (middleman) commission.
       </p>
     </div>
 
