--- a/public/index.html
+++ b/public/index.html
@@ -51,8 +51,8 @@
         </div>
       </div>
       <div class="flex items-center gap-3">
-        <a href="#" class="text-gray-700 hover:text-orange-500 font-medium text-base transition">Sign in</a>
-        <a href="#" class="bg-orange-500 hover:bg-orange-600 text-white font-semibold py-2.5 px-6 rounded-full text-base transition duration-300 shadow-sm hover:shadow-md">Join</a>
+        <a href="login/" class="text-gray-700 hover:text-orange-500 font-medium text-base transition">Sign in</a>
+        <a href="signup/" class="bg-orange-500 hover:bg-orange-600 text-white font-semibold py-2.5 px-6 rounded-full text-base transition duration-300 shadow-sm hover:shadow-md">Join</a>
       </div>
     </div>
   </header>
