--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>UDO </title>
   <link rel="icon" type="image/jpeg" href="logo/uletter.jpg">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
@@ -24,7 +27,7 @@
     }
   </style>
 </head>
-<body class="min-h-screen font-sans antialiased text-gray-900">
+  <body class="min-h-screen antialiased text-gray-900" style="font-family: 'Nunito', sans-serif;">
 
   <!-- Top Search Bar -->
   <header class="sticky top-0 z-50 bg-white/80 backdrop-blur-md border-b border-gray-200 shadow-sm">
