--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,11 @@
       <p class="text-xl sm:text-2xl text-gray-700 font-light">
          Select the best. Skip the (middleman) commission.
       </p>
+      <div class="mt-6">
+        <a href="profiles-list/" class="inline-block bg-orange-500 hover:bg-orange-600 text-white font-semibold py-3 px-8 rounded-full text-lg transition duration-300 shadow-md hover:shadow-lg">
+          Browse Professionals
+        </a>
+      </div>
     </div>
 
     <!-- Grid of image cards -->
@@ -181,9 +186,9 @@
           <p class="text-lg text-gray-600 leading-relaxed mb-8">
             Connect with verified professionals for any task around your home. From furniture assembly to home repairs, we make it easy to find skilled help at fair prices. No middleman, no hidden fees, just quality service you can trust.
           </p>
-          <button class="bg-orange-500 hover:bg-orange-600 text-white font-semibold py-4 px-8 rounded-full text-lg transition duration-300 shadow-md hover:shadow-lg w-fit">
-            Get Started Today
-          </button>
+          <a href="profiles-list/" class="bg-orange-500 hover:bg-orange-600 text-white font-semibold py-4 px-8 rounded-full text-lg transition duration-300 shadow-md hover:shadow-lg w-fit inline-block">
+            Browse Professionals
+          </a>
         </div>
       </div>
     </div>
@@ -402,7 +407,7 @@
           <h4 class="text-lg font-semibold mb-4">Quick Links</h4>
           <ul class="space-y-2">
             <li><a href="#" class="text-gray-400 hover:text-orange-500 transition">Home</a></li>
-            <li><a href="#" class="text-gray-400 hover:text-orange-500 transition">Services</a></li>
+            <li><a href="profiles-list/" class="text-gray-400 hover:text-orange-500 transition">Services</a></li>
             <li><a href="join-as-professional/" class="text-gray-400 hover:text-orange-500 transition">Join as Pro</a></li>
             <li><a href="#" class="text-gray-400 hover:text-orange-500 transition">How It Works</a></li>
           </ul>
